Make monorepo work for ui & ui-demo (#202)
* Make auto-reload work for ui-demo

For mobile, use a customized metro config according to the Expo docs
For web, use a customized webpack config with
expo-yarn-workspaces.

* Upgrade react-date*

* Fix up datetime types

* Lint

* Fix up building preview

* Build web before previewing

* Update readme

--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
   "license": "Apache-2.0",
   "scripts": {
     "web": "yarn --cwd packages/ui-demo web",
+    "ios": "yarn --cwd packages/ui-demo ios",
+    "android": "yarn --cwd packages/ui-demo android",
     "build": "yarn --cwd packages/ui build",
-    "dev": "yarn --cwd packages/ui dev",
-    "make-links": "cd packages/ui && yarn link && cd ../ui-demo && yarn link ferns-ui"
-  },
-  "devDependencies": {
+    "preview": "yarn build && yarn --cwd packages/ui-demo build-web"
   },
   "resolutions": {
     "@types/react": "17.0.44"
+  },
+  "workspaces": {
+    "packages": [
+      "packages/*"
+    ]
   }
 }
