--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -1,14 +1,13 @@
 {
   "name": "ferns-ui-demo",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
+  "main": "index.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "build-ui": "cd ../ui && yarn && yarn build && cp -a dist/. ../ui-demo/node_modules/ferns-ui/dist/ && cd ../ui-demo",
-    "build-preview": "yarn build-ui && yarn build-web",
+    "build-preview": "yarn build-web",
     "build-web": "npx expo export:web",
     "eject": "npx expo eject",
     "lint": "eslint \"**/*.ts*\"",
@@ -47,13 +46,12 @@
     "expo-image-manipulator": "~11.1.1",
     "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
-    "ferns-ui": "0.25.0",
     "libphonenumber-js": "^1.10.21",
     "moment-timezone": "^0.5.41",
     "react": "18.2.0",
     "react-app-polyfill": "^3.0.0",
-    "react-date-picker": "^9.2.0",
-    "react-datetime-picker": "^4.2.0",
+    "react-date-picker": "^10.0.3",
+    "react-datetime-picker": "^5.0.3",
     "react-dom": "18.2.0",
     "react-native": "0.71.4",
     "react-native-calendars": "^1.1293.0",
@@ -72,7 +70,7 @@
     "react-native-web": "~0.18.11",
     "react-router": "^6.8.2",
     "react-router-dom": "^6.8.2",
-    "react-time-picker": "^5.2.0",
+    "react-time-picker": "^6.0.4",
     "swiper": "^9.1.1"
   },
   "devDependencies": {
@@ -90,6 +88,7 @@
     "eslint-plugin-react-native": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "2.0.0",
+    "expo-yarn-workspaces": "^2.1.0",
     "prettier": "^2.8.4",
     "typescript": "^4.9.4"
   }
