--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ferns-ui",
-  "version": "0.27.1",
+  "version": "0.28.0",
   "main": "dist/index.js",
   "license": "Apache-2.0",
   "scripts": {
@@ -112,9 +112,7 @@
       "jest-watch-typeahead/testname"
     ]
   },
-  "dependencies": {
-
-  },
+  "dependencies": {},
   "devDependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.17.11",
