--- a/dependabot.yml
+++ b/dependabot.yml
@@ -9,11 +9,11 @@ updates:
     directory: "/" # Location of package manifests
     schedule:
       interval: "weekly"
+  - package-ecosystem: "npm"
+    directory: "/ui"
+    schedule:
+      interval: "weekly"
   - package-ecosystem: "npm" # See documentation for possible values
-      directory: "/ui" # Location of package manifests
-      schedule:
-        interval: "weekly"
-  - package-ecosystem: "npm" # See documentation for possible values
-      directory: "/ui-demo" # Location of package manifests
-      schedule:
-        interval: "weekly"
+    directory: "/ui-demo" # Location of package manifests
+    schedule:
+      interval: "weekly"
