--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -35,12 +35,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@expo/webpack-config": "^18.0.1",
+    "@expo/webpack-config": "^18.0.4",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/blur": "^4.3.0",
     "@react-native-community/datetimepicker": "6.7.3",
     "@react-native-picker/picker": "2.4.8",
-    "expo": "^48.0.9",
+    "expo": "^48.0.17",
     "expo-font": "~11.1.1",
     "expo-haptics": "~12.2.1",
     "expo-image-manipulator": "~11.1.1",
@@ -48,6 +48,7 @@
     "expo-status-bar": "~1.4.4",
     "libphonenumber-js": "^1.10.21",
     "moment-timezone": "^0.5.41",
+    "postcss": "8.4.23",
     "react": "18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-date-picker": "^10.0.3",
@@ -69,8 +70,8 @@
     "react-native-swiper-flatlist": "^3.1.1",
     "react-native-toast-notifications": "^3.3.1",
     "react-native-web": "~0.18.11",
-    "react-router": "^6.8.2",
-    "react-router-dom": "^6.8.2",
+    "react-router": "^6.11.2",
+    "react-router-dom": "^6.11.2",
     "react-time-picker": "^6.0.4",
     "swiper": "^9.1.1"
   },
@@ -91,6 +92,6 @@
     "eslint-plugin-unused-imports": "2.0.0",
     "expo-yarn-workspaces": "^2.1.0",
     "prettier": "^2.8.4",
-    "typescript": "^4.9.4"
+    "typescript": "^5.0.4"
   }
 }
