--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -58,14 +58,15 @@
     "react-native": "0.71.8",
     "react-native-actions-sheet": "^0.8.29",
     "react-native-calendars": "^1.1295.0",
-    "react-native-gesture-handler": "~2.9.0",
+    "react-native-drawer-layout": "^3.2.0",
+    "react-native-gesture-handler": "^2.10.1",
     "react-native-haptic-feedback": "^1.14.0",
     "react-native-hyperlink": "^0.0.22",
     "react-native-modalize": "^2.1.1",
     "react-native-permissions": "^3.7.3",
     "react-native-picker-select": "^8.0.4",
     "react-native-portalize": "^1.0.7",
-    "react-native-reanimated": "~2.14.4",
+    "react-native-reanimated": "^3.1.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-svg": "13.4.0",
     "react-native-swiper-flatlist": "^3.1.1",
