--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -54,6 +54,7 @@
     "react-date-picker": "^10.0.3",
     "react-datetime-picker": "^5.0.3",
     "react-dom": "18.2.0",
+    "react-keyed-flatten-children": "^2.2.1",
     "react-native": "0.71.8",
     "react-native-actions-sheet": "^0.8.29",
     "react-native-calendars": "^1.1295.0",
