Add sticky table header
Default the sticky table header to true, since most tables usually have
this.

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -23,7 +23,8 @@
     "noImplicitAny": true,
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
-    "downlevelIteration": true
+    "downlevelIteration": true,
+    "ignoreDeprecations": "5.0"
   },
   "include": ["src"],
 }
