Add sticky table header
Default the sticky table header to true, since most tables usually have
this. Also default to alternating white and light gray backgrounds to
make the table easier to see.

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -22,7 +22,9 @@
     "noImplicitReturns": true,
     "noImplicitAny": true,
     "strictNullChecks": true,
-    "downlevelIteration": true
+    "suppressImplicitAnyIndexErrors": true,
+    "downlevelIteration": true,
+    "ignoreDeprecations": "5.0"
   },
   "include": ["src"],
 }
