--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -112,9 +112,6 @@
       "jest-watch-typeahead/testname"
     ]
   },
-  "dependencies": {
-    "dayjs": "^1.11.9"
-  },
   "devDependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.17.11",
@@ -126,6 +123,7 @@
     "@types/react-time-picker": "^4.0.3",
     "@typescript-eslint/eslint-plugin": "^5.34.0",
     "@typescript-eslint/parser": "^5.34.0",
+    "dayjs": "^1.11.9",
     "eslint": "^8.35.0",
     "eslint-config-ferns": "^0.4.0",
     "eslint-config-prettier": "^8.7.0",
@@ -177,6 +175,7 @@
     "@react-native-picker/picker": "2.4.8",
     "@typescript-eslint/eslint-plugin": "^5.34.0",
     "@typescript-eslint/parser": "^5.34.0",
+    "dayjs": "^1.11.9",
     "expo-font": "~11.1.1",
     "expo-haptics": "~12.2.1",
     "expo-image-manipulator": "~11.1.1",
