Moment to dayjs (#256)
* Moment to dayjs

* Fix up dependencies

* Respond to review

* Fix build

--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -40,6 +40,7 @@
     "@react-native-community/blur": "^4.3.0",
     "@react-native-community/datetimepicker": "6.7.3",
     "@react-native-picker/picker": "2.4.8",
+    "dayjs": "^1.11.9",
     "expo": "^48.0.17",
     "expo-font": "~11.1.1",
     "expo-haptics": "~12.2.1",
@@ -47,7 +48,6 @@
     "expo-image-picker": "~14.1.1",
     "expo-status-bar": "~1.4.4",
     "libphonenumber-js": "^1.10.21",
-    "moment-timezone": "^0.5.41",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-app-polyfill": "^3.0.0",
