--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -112,7 +112,6 @@
       "jest-watch-typeahead/testname"
     ]
   },
-  "dependencies": {},
   "devDependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.17.11",
@@ -124,6 +123,7 @@
     "@types/react-time-picker": "^4.0.3",
     "@typescript-eslint/eslint-plugin": "^5.34.0",
     "@typescript-eslint/parser": "^5.34.0",
+    "dayjs": "^1.11.9",
     "eslint": "^8.35.0",
     "eslint-config-ferns": "^0.4.0",
     "eslint-config-prettier": "^8.7.0",
@@ -142,7 +142,6 @@
     "libphonenumber-js": "^1.10.21",
     "lodash": "^4.17.21",
     "mdurl": "^1.0.1",
-    "moment-timezone": "^0.5.41",
     "prettier": "^2.8.4",
     "react": "18.2.0",
     "react-app-polyfill": "^3.0.0",
@@ -176,13 +175,13 @@
     "@react-native-picker/picker": "2.4.8",
     "@typescript-eslint/eslint-plugin": "^5.34.0",
     "@typescript-eslint/parser": "^5.34.0",
+    "dayjs": "^1.11.9",
     "expo-font": "~11.1.1",
     "expo-haptics": "~12.2.1",
     "expo-image-manipulator": "~11.1.1",
     "expo-image-picker": "~14.1.1",
     "libphonenumber-js": "^1.10.21",
     "lodash": "^4.17.21",
-    "moment-timezone": "^0.5.41",
     "react": "18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-date-picker": "^10.0.3",
