--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -35,46 +35,46 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@expo/webpack-config": "^18.0.4",
-    "@react-native-async-storage/async-storage": "1.17.11",
-    "@react-native-community/blur": "^4.3.0",
-    "@react-native-community/datetimepicker": "6.7.3",
-    "@react-native-picker/picker": "2.4.8",
+    "@expo/webpack-config": "^18.1.2",
+    "@react-native-async-storage/async-storage": "1.19.1",
+    "@react-native-community/blur": "^4.3.2",
+    "@react-native-community/datetimepicker": "7.4.1",
+    "@react-native-picker/picker": "2.4.10",
     "dayjs": "^1.11.9",
-    "expo": "^48.0.17",
-    "expo-font": "~11.1.1",
-    "expo-haptics": "~12.2.1",
-    "expo-image-manipulator": "~11.1.1",
-    "expo-image-picker": "~14.1.1",
-    "expo-status-bar": "~1.4.4",
-    "libphonenumber-js": "^1.10.21",
-    "postcss": "8.4.23",
+    "expo": "^49.0.6",
+    "expo-font": "~11.4.0",
+    "expo-haptics": "~12.4.0",
+    "expo-image-manipulator": "~11.3.0",
+    "expo-image-picker": "~14.3.2",
+    "expo-status-bar": "~1.6.0",
+    "libphonenumber-js": "^1.10.38",
+    "postcss": "8.4.27",
     "react": "18.2.0",
     "react-app-polyfill": "^3.0.0",
-    "react-date-picker": "^10.0.3",
-    "react-datetime-picker": "^5.0.3",
+    "react-date-picker": "^10.5.0",
+    "react-datetime-picker": "^5.5.1",
     "react-dom": "18.2.0",
     "react-keyed-flatten-children": "^2.2.1",
-    "react-native": "0.71.8",
-    "react-native-actions-sheet": "^0.8.29",
-    "react-native-calendars": "^1.1295.0",
-    "react-native-gesture-handler": "~2.9.0",
-    "react-native-haptic-feedback": "^1.14.0",
+    "react-native": "0.72.3",
+    "react-native-actions-sheet": "^0.9.0-alpha.21",
+    "react-native-calendars": "^1.1300.0",
+    "react-native-gesture-handler": "~2.12.1",
+    "react-native-haptic-feedback": "^2.0.3",
     "react-native-hyperlink": "^0.0.22",
     "react-native-modalize": "^2.1.1",
-    "react-native-permissions": "^3.7.3",
+    "react-native-permissions": "^3.8.4",
     "react-native-picker-select": "^8.0.4",
     "react-native-portalize": "^1.0.7",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-svg": "13.4.0",
-    "react-native-swiper-flatlist": "^3.1.1",
+    "react-native-reanimated": "~3.4.1",
+    "react-native-safe-area-context": "4.7.1",
+    "react-native-svg": "13.10.0",
+    "react-native-swiper-flatlist": "^3.2.3",
     "react-native-toast-notifications": "^3.3.1",
-    "react-native-web": "~0.18.11",
-    "react-router": "^6.11.2",
-    "react-router-dom": "^6.11.2",
-    "react-time-picker": "^6.0.4",
-    "swiper": "^9.1.1"
+    "react-native-web": "~0.19.7",
+    "react-router": "^6.14.2",
+    "react-router-dom": "^6.14.2",
+    "react-time-picker": "^6.5.0",
+    "swiper": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
