--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -36,10 +36,11 @@
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^18.1.2",
-    "@react-native-async-storage/async-storage": "1.19.1",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/blur": "^4.3.2",
-    "@react-native-community/datetimepicker": "7.4.1",
+    "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-picker/picker": "2.4.10",
+    "@shopify/flash-list": "1.4.3",
     "dayjs": "^1.11.9",
     "expo": "^49.0.6",
     "expo-font": "~11.4.0",
@@ -65,9 +66,9 @@
     "react-native-permissions": "^3.8.4",
     "react-native-picker-select": "^8.0.4",
     "react-native-portalize": "^1.0.7",
-    "react-native-reanimated": "~3.4.1",
-    "react-native-safe-area-context": "4.7.1",
-    "react-native-svg": "13.10.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-svg": "13.9.0",
     "react-native-swiper-flatlist": "^3.2.3",
     "react-native-toast-notifications": "^3.3.1",
     "react-native-web": "~0.19.7",
@@ -78,21 +79,21 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "@typescript-eslint/eslint-plugin": "^5.54.1",
-    "@typescript-eslint/parser": "^5.54.1",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1",
     "eslint": "^8.35.0",
     "eslint-config-ferns": "^0.4.0",
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-lodash": "^7.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-plugin-react-native": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-unused-imports": "2.0.0",
+    "eslint-plugin-unused-imports": "3.0.0",
     "expo-yarn-workspaces": "^2.1.0",
-    "prettier": "^2.8.4",
+    "prettier": "^3.0.0",
     "typescript": "^5.0.4"
   }
 }
