--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -114,35 +114,36 @@
   },
   "devDependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/blur": "^4.3.0",
-    "@react-native-community/datetimepicker": "6.7.3",
-    "@react-native-picker/picker": "2.4.8",
+    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-picker/picker": "2.4.10",
     "@types/mdurl": "^1.0.2",
-    "@types/react-datetime-picker": "^3.4.1",
-    "@types/react-time-picker": "^4.0.3",
-    "@typescript-eslint/eslint-plugin": "^5.34.0",
-    "@typescript-eslint/parser": "^5.34.0",
+    "@types/react": "~18.2.14",
+    "@types/react-datetime-picker": "^5.0.0",
+    "@types/react-time-picker": "^6.0.0",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1",
     "dayjs": "^1.11.9",
     "eslint": "^8.35.0",
     "eslint-config-ferns": "^0.4.0",
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-lodash": "^7.1.0",
-    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.5.0",
     "eslint-plugin-react-native": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
-    "eslint-plugin-unused-imports": "2.0.0",
-    "expo-font": "~11.1.1",
-    "expo-haptics": "~12.2.1",
-    "expo-image-manipulator": "~11.1.1",
-    "expo-image-picker": "~14.1.1",
+    "eslint-plugin-unused-imports": "3.0.0",
+    "expo-font": "~11.4.0",
+    "expo-haptics": "~12.4.0",
+    "expo-image-manipulator": "~11.3.0",
+    "expo-image-picker": "~14.3.2",
     "libphonenumber-js": "^1.10.21",
     "lodash": "^4.17.21",
     "mdurl": "^1.0.1",
-    "prettier": "^2.8.4",
+    "prettier": "^3.0.0",
     "react": "18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-date-picker": "^10.0.3",
@@ -150,15 +151,15 @@
     "react-dev-utils": "^12.0.1",
     "react-dom": "18.2.0",
     "react-keyed-flatten-children": "^2.2.1",
-    "react-native": "0.71.8",
+    "react-native": "0.72.3",
     "react-native-actions-sheet": "^0.8.29",
     "react-native-calendars": "^1.1295.0",
-    "react-native-gesture-handler": "~2.9.0",
+    "react-native-gesture-handler": "~2.12.1",
     "react-native-modalize": "^2.1.1",
     "react-native-permissions": "^3.7.3",
     "react-native-picker-select": "^8.0.4",
     "react-native-portalize": "^1.0.7",
-    "react-native-svg": "^13.4.0",
+    "react-native-svg": "13.9.0",
     "react-native-swiper-flatlist": "^3.1.1",
     "react-native-toast-notifications": "^3.3.1",
     "react-router": "^6.11.2",
@@ -169,17 +170,17 @@
   },
   "peerDependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/blur": "^4.3.0",
-    "@react-native-community/datetimepicker": "6.7.3",
-    "@react-native-picker/picker": "2.4.8",
-    "@typescript-eslint/eslint-plugin": "^5.34.0",
-    "@typescript-eslint/parser": "^5.34.0",
+    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-picker/picker": "2.4.10",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
+    "@typescript-eslint/parser": "^6.2.1",
     "dayjs": "^1.11.9",
-    "expo-font": "~11.1.1",
-    "expo-haptics": "~12.2.1",
-    "expo-image-manipulator": "~11.1.1",
-    "expo-image-picker": "~14.1.1",
+    "expo-font": "~11.4.0",
+    "expo-haptics": "~12.4.0",
+    "expo-image-manipulator": "~11.3.0",
+    "expo-image-picker": "~14.3.2",
     "libphonenumber-js": "^1.10.21",
     "lodash": "^4.17.21",
     "react": "18.2.0",
@@ -188,15 +189,15 @@
     "react-datetime-picker": "^5.0.3",
     "react-dev-utils": "^12.0.1",
     "react-dom": "18.2.0",
-    "react-native": "0.71.8",
+    "react-native": "0.72.3",
     "react-native-actions-sheet": "^0.8.29",
     "react-native-calendars": "^1.1295.0",
-    "react-native-gesture-handler": "~2.9.0",
+    "react-native-gesture-handler": "~2.12.1",
     "react-native-modalize": "^2.1.1",
     "react-native-permissions": "^3.7.3",
     "react-native-picker-select": "^8.0.4",
     "react-native-portalize": "^1.0.7",
-    "react-native-svg": "^13.4.0",
+    "react-native-svg": "13.9.0",
     "react-native-toast-notifications": "^3.3.1",
     "react-router": "^6.11.2",
     "react-router-dom": "^6.11.2",
