--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -112,10 +112,7 @@
       "jest-watch-typeahead/testname"
     ]
   },
-  "dependencies": {
-    "react-native-drawer-layout": "^3.2.0",
-    "react-native-reanimated": "^3.1.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@expo/vector-icons": "^13.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
@@ -196,11 +193,13 @@
     "react-native": "0.72.3",
     "react-native-actions-sheet": "^0.8.29",
     "react-native-calendars": "^1.1295.0",
-    "react-native-gesture-handler": "~2.12.1",
+    "react-native-drawer-layout": "^3.2.1",
+    "react-native-gesture-handler": "^2.12.1",
     "react-native-modalize": "^2.1.1",
     "react-native-permissions": "^3.7.3",
     "react-native-picker-select": "^8.0.4",
     "react-native-portalize": "^1.0.7",
+    "react-native-reanimated": "3.3.0",
     "react-native-svg": "13.9.0",
     "react-native-toast-notifications": "^3.3.1",
     "react-router": "^6.11.2",
