Fix peer and dev dependencies

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -155,11 +155,13 @@
     "react-native": "0.72.3",
     "react-native-actions-sheet": "^0.8.29",
     "react-native-calendars": "^1.1295.0",
+    "react-native-drawer-layout": "^3.2.1",
     "react-native-gesture-handler": "~2.12.1",
     "react-native-modalize": "^2.1.1",
     "react-native-permissions": "^3.7.3",
     "react-native-picker-select": "^8.0.4",
     "react-native-portalize": "^1.0.7",
+    "react-native-reanimated": "3.3.0",
     "react-native-svg": "13.9.0",
     "react-native-swiper-flatlist": "^3.1.1",
     "react-native-toast-notifications": "^3.3.1",
@@ -194,7 +196,7 @@
     "react-native-actions-sheet": "^0.8.29",
     "react-native-calendars": "^1.1295.0",
     "react-native-drawer-layout": "^3.2.1",
-    "react-native-gesture-handler": "^2.12.1",
+    "react-native-gesture-handler": "~2.12.1",
     "react-native-modalize": "^2.1.1",
     "react-native-permissions": "^3.7.3",
     "react-native-picker-select": "^8.0.4",
