--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -59,6 +59,7 @@
     "react-native": "0.72.3",
     "react-native-actions-sheet": "^0.9.0-alpha.21",
     "react-native-calendars": "^1.1300.0",
+    "react-native-drawer-layout": "^3.2.1",
     "react-native-gesture-handler": "~2.12.1",
     "react-native-haptic-feedback": "^2.0.3",
     "react-native-hyperlink": "^0.0.22",
