--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -43,6 +43,7 @@
     "@shopify/flash-list": "1.4.3",
     "dayjs": "^1.11.9",
     "expo": "^49.0.6",
+    "expo-clipboard": "~4.3.1",
     "expo-font": "~11.4.0",
     "expo-haptics": "~12.4.0",
     "expo-image-manipulator": "~11.3.0",
