Update dependencies and updateDeps script

--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
-    "build-preview": "yarn build-web",
-    "build-web": "npx expo export:web",
+    "start": "NODE_OPTIONS=--openssl-legacy-provider expo start",
+    "android": "NODE_OPTIONS=--openssl-legacy-provider expo start --android",
+    "ios": "NODE_OPTIONS=--openssl-legacy-provider expo start --ios",
+    "web": "NODE_OPTIONS=--openssl-legacy-provider expo start --web",
+    "build-preview": "NODE_OPTIONS=--openssl-legacy-provider yarn build-web",
+    "build-web": "NODE_OPTIONS=--openssl-legacy-provider npx expo export:web",
     "eject": "npx expo eject",
     "lint": "eslint \"**/*.ts*\"",
     "lintfix": "eslint --fix \"**/*.ts*\""
@@ -35,12 +35,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@expo/webpack-config": "^18.1.2",
+    "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/blur": "^4.3.2",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-picker/picker": "2.4.10",
     "@shopify/flash-list": "1.4.3",
+    "clsx": "^2.0.0",
     "dayjs": "^1.11.9",
     "expo": "^49.0.6",
     "expo-clipboard": "~4.3.1",
@@ -50,14 +51,14 @@
     "expo-image-picker": "~14.3.2",
     "expo-status-bar": "~1.6.0",
     "libphonenumber-js": "^1.10.38",
-    "postcss": "8.4.27",
+    "postcss": "8.4.29",
     "react": "18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-date-picker": "^10.5.0",
     "react-datetime-picker": "^5.5.1",
     "react-dom": "18.2.0",
     "react-keyed-flatten-children": "^2.2.1",
-    "react-native": "0.72.3",
+    "react-native": "0.72.4",
     "react-native-actions-sheet": "^0.9.0-alpha.21",
     "react-native-calendars": "^1.1300.0",
     "react-native-drawer-layout": "^3.2.1",
@@ -80,12 +81,12 @@
     "swiper": "^10.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.22.17",
     "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^6.2.1",
     "eslint": "^8.35.0",
     "eslint-config-ferns": "^0.4.0",
-    "eslint-config-prettier": "^8.7.0",
+    "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-lodash": "^7.1.0",
     "eslint-plugin-prettier": "^5.0.0",
