--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -98,5 +98,8 @@
     "expo-yarn-workspaces": "^2.1.0",
     "prettier": "^3.0.0",
     "typescript": "^5.0.4"
-  }
+  },
+  "engine": {
+  "node": "18"
+}
 }
