Check dependencies against Expo Doctor
Hopefully this will let us merge dependabot PRs without worrying they
will break Expo.

--- a/.github/workflows/ui-ci.yml
+++ b/.github/workflows/ui-ci.yml
@@ -38,6 +38,9 @@ jobs:
         # but use the cache?
         run: yarn --frozen-lockfile
         working-directory: 'packages/ui'
+      - name: Ensure dependencies don't conflict with Expo
+        run: npx expo-doctor
+        working-directory: 'packages/ui'
       - name: yarn lint
         run: yarn lint
         working-directory: 'packages/ui'
