--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -34,6 +34,7 @@
     "useTabs": false
   },
   "dependencies": {
+    "@expo/config-plugins": "~7.2.2",
     "@expo/vector-icons": "^13.0.0",
     "@expo/webpack-config": "^19.0.0",
     "@react-native-async-storage/async-storage": "1.18.2",
@@ -94,7 +95,7 @@
     "eslint-plugin-react-native": "^4.0.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "3.0.0",
-    "expo-yarn-workspaces": "^2.1.0",
+    "expo-yarn-workspaces": "~2.2.0",
     "prettier": "^3.0.0",
     "typescript": "^5.0.4"
   },
