--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -112,6 +112,9 @@
       "jest-watch-typeahead/testname"
     ]
   },
+  "files": [
+    "dist/**/*"
+  ],
   "devDependencies": {
     "@expo/config-plugins": "~7.2.2",
     "@expo/vector-icons": "^13.0.0",
