--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -113,7 +113,9 @@
     ]
   },
   "files": [
-    "dist/**/*"
+    "dist/*.js",
+    "dist/*.d.ts",
+    "dist/*.map"
   ],
   "devDependencies": {
     "@expo/config-plugins": "~7.2.2",
