--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -201,7 +201,7 @@
     "react-native": "0.72.6",
     "react-native-actions-sheet": "^0.8.29",
     "react-native-calendars": "^1.1301.0",
-    "react-native-drawer-layout": "^3.2.1",
+    "react-native-drawer-layout": "^4.0.0-alpha.1",
     "react-native-gesture-handler": "~2.13.4",
     "react-native-modalize": "^2.1.1",
     "react-native-permissions": "^3.10.0",
