--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -213,5 +213,8 @@
     "react-router": "^6.17.0",
     "react-router-dom": "^6.17.0",
     "react-time-picker": "^6.5.2"
+  },
+  "dependencies": {
+    "react-native-google-places": "^3.1.2"
   }
 }
