--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -162,6 +162,7 @@
     "react-native-calendars": "^1.1301.0",
     "react-native-drawer-layout": "^4.0.0-alpha.1",
     "react-native-gesture-handler": "~2.13.4",
+    "react-native-google-places-autocomplete": "^2.5.6",
     "react-native-modalize": "^2.1.1",
     "react-native-permissions": "^3.10.0",
     "react-native-picker-select": "^8.1.0",
