--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -124,20 +124,20 @@
     "@react-native-community/datetimepicker": "7.6.1",
     "@react-native-picker/picker": "2.5.1",
     "@types/mdurl": "^1.0.4",
-    "@types/react": "^18.2.31",
+    "@types/react": "~18.2.43",
     "@types/react-datetime-picker": "^5.0.0",
     "@types/react-time-picker": "^6.0.0",
-    "@typescript-eslint/eslint-plugin": "^6.9.0",
-    "@typescript-eslint/parser": "^6.9.0",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
     "dayjs": "^1.11.10",
-    "eslint": "^8.52.0",
-    "eslint-config-ferns": "^0.4.5",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint": "^8.55.0",
+    "eslint-config-ferns": "^0.4.8",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-lodash": "^7.1.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.5.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-native": "^4.1.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "3.0.0",
@@ -149,7 +149,7 @@
     "libphonenumber-js": "^1.10.48",
     "lodash": "^4.17.21",
     "mdurl": "^1.0.1",
-    "prettier": "^3.0.3",
+    "prettier": "^3.1.1",
     "react": "18.2.0",
     "react-app-polyfill": "^3.0.0",
     "react-date-picker": "^10.5.2",
@@ -175,44 +175,45 @@
     "react-router-dom": "^6.17.0",
     "react-time-picker": "^6.5.2",
     "tsc-watch": "^6.0.4",
-    "typescript": "^5.2.2"
+    "typescript": "^5.3.3"
   },
   "peerDependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "1.19.3",
-    "@react-native-community/blur": "^4.3.0",
-    "@react-native-community/datetimepicker": "7.6.1",
-    "@react-native-picker/picker": "2.5.1",
-    "@typescript-eslint/eslint-plugin": "^6.9.0",
-    "@typescript-eslint/parser": "^6.9.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-community/blur": "^4.3.2",
+    "@react-native-community/datetimepicker": "7.2.0",
+    "@react-native-picker/picker": "2.4.10",
+    "@typescript-eslint/eslint-plugin": "^6.13.2",
+    "@typescript-eslint/parser": "^6.13.2",
     "dayjs": "^1.11.10",
-    "expo-clipboard": "~4.5.0",
-    "expo-font": "~11.6.0",
-    "expo-haptics": "~12.6.0",
-    "expo-image-manipulator": "~11.5.0",
-    "expo-image-picker": "~14.5.0",
-    "libphonenumber-js": "^1.10.48",
+    "expo-clipboard": "~4.3.1",
+    "expo-font": "~11.4.0",
+    "expo-haptics": "~12.4.0",
+    "expo-image-manipulator": "~11.3.0",
+    "expo-image-picker": "~14.3.2",
+    "libphonenumber-js": "^1.10.51",
     "lodash": "^4.17.21",
     "react": "18.2.0",
     "react-app-polyfill": "^3.0.0",
-    "react-date-picker": "^10.5.2",
-    "react-datetime-picker": "^5.5.3",
+    "react-date-picker": "^10.6.0",
+    "react-datetime-picker": "^5.6.0",
     "react-dev-utils": "^12.0.1",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-actions-sheet": "^0.8.29",
-    "react-native-calendars": "^1.1301.0",
-    "react-native-drawer-layout": "^4.0.0-alpha.1",
-    "react-native-gesture-handler": "~2.13.4",
+    "react-native-calendars": "^1.1302.0",
+    "react-native-drawer-layout": "^3.2.2",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-modalize": "^2.1.1",
     "react-native-permissions": "^3.10.0",
     "react-native-picker-select": "^8.1.0",
     "react-native-portalize": "^1.0.7",
-    "react-native-reanimated": "~3.5.4",
-    "react-native-svg": "13.14.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-svg": "13.9.0",
     "react-native-toast-notifications": "^3.4.0",
-    "react-router": "^6.17.0",
-    "react-router-dom": "^6.17.0",
-    "react-time-picker": "^6.5.2"
-  }
+    "react-router": "^6.20.1",
+    "react-router-dom": "^6.20.1",
+    "react-time-picker": "^6.6.0"
+  },
+  "dependencies": {}
 }
