--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -15,6 +15,16 @@
   },
   "license": "Apache-2.0",
   "eslintConfig": {
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+      "project": "./tsconfig.json",
+      "tsconfigRootDir": "./",
+      "ecmaFeatures": {
+        "jsx": true
+      },
+      "ecmaVersion": 2018,
+      "sourceType": "module"
+    },
     "extends": [
       "ferns"
     ],
