--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -40,6 +40,8 @@
   "eslintConfig": {
     "parser": "@typescript-eslint/parser",
     "parserOptions": {
+      "project": "./tsconfig.json",
+      "tsconfigRootDir": "./",
       "ecmaFeatures": {
         "jsx": true
       },
