Fix up demo too

--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -44,58 +44,13 @@
     "useTabs": false
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "1.19.3",
-    "@react-native-community/blur": "^4.3.0",
-    "@react-native-community/datetimepicker": "7.6.1",
-    "@react-native-picker/picker": "2.5.1",
-    "@typescript-eslint/eslint-plugin": "^6.13.2",
-    "@typescript-eslint/parser": "^6.13.2",
-    "dayjs": "^1.11.10",
-    "expo-clipboard": "~4.5.0",
-    "expo-font": "~11.6.0",
-    "expo-haptics": "~12.6.0",
-    "expo-image-manipulator": "~11.5.0",
-    "expo-image-picker": "~14.5.0",
-    "libphonenumber-js": "^1.10.48",
-    "lodash": "^4.17.21",
-    "react": "18.2.0",
-    "react-app-polyfill": "^3.0.0",
-    "react-date-picker": "^10.5.2",
-    "react-datetime-picker": "^5.5.3",
-    "react-dev-utils": "^12.0.1",
-    "react-dom": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-actions-sheet": "^0.8.29",
-    "react-native-calendars": "^1.1301.0",
-    "react-native-drawer-layout": "^4.0.0-alpha.1",
-    "react-native-gesture-handler": "~2.13.4",
-    "react-native-modalize": "^2.1.1",
-    "react-native-permissions": "^3.10.0",
-    "react-native-picker-select": "^8.1.0",
-    "react-native-portalize": "^1.0.7",
-    "react-native-reanimated": "~3.3.0",
-    "react-native-svg": "13.14.0",
-    "react-native-toast-notifications": "^3.4.0",
-    "react-router": "^6.17.0",
-    "react-router-dom": "^6.17.0",
-    "react-time-picker": "^6.5.2"
+    "react": "18.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.6",
     "@expo/config-plugins": "~7.2.2",
     "@expo/webpack-config": "^19.0.0",
     "@shopify/flash-list": "1.4.3",
-    "expo": "^49.0.21",
-    "expo-status-bar": "~1.6.0",
-    "postcss": "8.4.31",
-    "react-keyed-flatten-children": "^2.2.1",
-    "react-native-haptic-feedback": "^2.0.3",
-    "react-native-hyperlink": "^0.0.22",
-    "react-native-safe-area-context": "4.6.3",
-    "react-native-swiper-flatlist": "^3.2.3",
-    "react-native-web": "~0.19.9",
-    "swiper": "^11.0.1",
-    "@babel/core": "^7.23.6",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "eslint": "^8.55.0",
@@ -109,8 +64,18 @@
     "eslint-plugin-react-native": "^4.1.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
     "eslint-plugin-unused-imports": "3.0.0",
+    "expo": "^49.0.21",
+    "expo-status-bar": "~1.6.0",
     "expo-yarn-workspaces": "~2.2.0",
+    "postcss": "8.4.31",
     "prettier": "^3.1.1",
+    "react-keyed-flatten-children": "^2.2.1",
+    "react-native-haptic-feedback": "^2.0.3",
+    "react-native-hyperlink": "^0.0.22",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-swiper-flatlist": "^3.2.3",
+    "react-native-web": "~0.19.9",
+    "swiper": "^11.0.1",
     "typescript": "^5.3.3"
   },
   "engine": {
