--- a/.github/workflows/ui-ci.yml
+++ b/.github/workflows/ui-ci.yml
@@ -41,6 +41,9 @@ jobs:
       - name: yarn lint
         run: yarn lint
         working-directory: 'packages/ui'
+      - name: expo doctor
+        run: yarn doctor
+        working-directory: 'packages/ui'
       - name: yarn build
         run: yarn build
         working-directory: 'packages/ui'
