--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -9,7 +9,8 @@
     "lintfix": "eslint --fix \"src/**/*.ts*\"",
     "build": "tsc",
     "dev": "tsc -w",
-    "deps": "node checkDeps.js"
+    "deps": "node checkDeps.js",
+    "doctor": "npx expo install --check"
   },
   "babel": {
     "presets": [
@@ -160,7 +161,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-native-async-storage/async-storage": "1.19.0",
     "@react-native-community/blur": "^4.3.0",
     "@react-native-community/datetimepicker": "7.2.0",
     "@react-native-picker/picker": "2.4.10",
