--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -58,7 +58,8 @@
       "lodash"
     ],
     "extends": [
-      "ferns"
+      "ferns",
+      "plugin:comment-length/recommended"
     ],
     "rules": {
       "react/function-component-definition": "off"
@@ -128,8 +129,9 @@
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "eslint": "^8.55.0",
-    "eslint-config-ferns": "^0.4.8",
+    "eslint-config-ferns": "^0.5.1",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-comment-length": "^1.7.2",
     "eslint-plugin-import": "^2.29.0",
     "eslint-plugin-lodash": "^7.1.0",
     "eslint-plugin-prettier": "^5.0.1",
