--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -125,6 +125,7 @@
     "@types/mdurl": "^1.0.4",
     "@types/react": "~18.2.43",
     "@types/react-datetime-picker": "^5.0.0",
+    "@types/react-signature-canvas": "^1.0.5",
     "@types/react-time-picker": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
@@ -190,9 +191,12 @@
     "react-native-picker-select": "^8.1.0",
     "react-native-portalize": "^1.0.7",
     "react-native-reanimated": "~3.3.0",
+    "react-native-signature-canvas": "^4.7.1",
     "react-native-svg": "13.9.0",
     "react-native-swiper-flatlist": "^3.1.1",
     "react-native-toast-notifications": "^3.4.0",
+    "react-native-webview": "13.2.2",
+    "react-signature-canvas": "^1.0.6",
     "react-time-picker": "^6.5.2"
   }
 }
