Fix dependency issues

--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -173,6 +173,7 @@
     "expo-haptics": "~12.4.0",
     "expo-image-manipulator": "~11.3.0",
     "expo-image-picker": "~14.3.2",
+    "expo-localization": "~14.3.0",
     "libphonenumber-js": "^1.10.48",
     "lodash": "^4.17.21",
     "react-app-polyfill": "^3.0.0",
@@ -190,7 +191,7 @@
     "react-native-permissions": "^3.10.0",
     "react-native-picker-select": "^8.1.0",
     "react-native-portalize": "^1.0.7",
-    "react-native-reanimated": "~3.6.2",
+    "react-native-reanimated": "~3.3.0",
     "react-native-signature-canvas": "^4.7.1",
     "react-native-svg": "13.9.0",
     "react-native-swiper-flatlist": "^3.1.1",
