--- a/package.json
+++ b/package.json
@@ -13,11 +13,18 @@
     "lintfix": "yarn --cwd packages/ui-demo lintfix && yarn --cwd packages/ui lintfix",
     "build": "yarn --cwd packages/ui build",
     "preview": "yarn build && yarn --cwd packages/ui-demo build-web",
-    "clean": "rm -rf node_modules && rm -rf packages/ui/node_modules && rm -rf packages/ui-demo/node_modules && yarn"
+    "clean": "rm -rf node_modules && rm -rf packages/ui/node_modules && rm -rf packages/ui-demo/node_modules && yarn",
+    "test": "yarn --cwd packages/ui test"
   },
   "workspaces": {
     "packages": [
       "packages/*"
     ]
+  },
+  "devDependencies": {
+    "@testing-library/react-native": "^12.4.3",
+    "@types/jest": "^29.5.12",
+    "jest": "^29.7.0",
+    "jest-expo": "^50.0.2"
   }
 }
