--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -18,6 +18,9 @@
       "react-app"
     ]
   },
+  "jest": {
+    "globalSetup": "./jest-setup.js"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
