--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -47,7 +47,10 @@
       "tsconfigRootDir": "./"
     },
     "rules": {
-      "@typescript-eslint/explicit-function-return-type": "off"
+      "react/function-component-definition": "off",
+      "@typescript-eslint/explicit-function-return-type": "off",
+      "@typescript-eslint/no-floating-promises": "off",
+      "@typescript-eslint/no-misused-promises": "off"
     }
   },
   "jest": {
