Switch to Luxon (#487)
* Got web to work with different timezones but still
working on mobile

* Remove debuging logs

* Fix dependency issues

* Centralize all date and time handling, migrate off dayjs

Dayjs doesn't support timezones correctly on mobile. Move everything to
luxon. Centralize all the date and time handling so we can test and
manage it more easily.

* Fix up date time handling with timezones

* lint

* Add date time range

* Add since/ago

* Ban moment and dayjs

* Add flag to show Today instead of time

* Allow leaving off ago

* Add printOnlyDate

* Hide timezone picker in date picker

* Lint issues

* Use CI testing

* Fixes from implementing

---------

Co-authored-by: Freddie Cuenca <freddie@flourish.health>

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lintfix": "yarn --cwd packages/ui-demo lintfix && yarn --cwd packages/ui lintfix",
     "build": "yarn --cwd packages/ui build",
     "preview": "yarn build && yarn --cwd packages/ui-demo build-web",
-    "clean": "rm -rf node_modules && rm -rf packages/ui/node_modules && rm -rf packages/ui-demo/node_modules && yarn"
+    "clean": "rm -rf node_modules && rm -rf packages/ui/node_modules && rm -rf packages/ui-demo/node_modules && yarn",
+    "test": "yarn --cwd packages/ui test"
   },
   "workspaces": {
     "packages": [
