Checkpoint, trying out expo-router

--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "private": true,
   "version": "0.1.0",
   "description": "Fullstack Express React Native framework for building iOS, Android, and Web apps with an Express API",
-  "main": "index.js",
   "license": "Apache-2.0",
   "scripts": {
     "web": "yarn --cwd packages/demo web",
@@ -18,6 +17,7 @@
   },
   "workspaces": {
     "packages": [
+      "app/*",
       "packages/*"
     ]
   }
