--- a/packages/ui-demo/package.json
+++ b/packages/ui-demo/package.json
@@ -37,7 +37,7 @@
     "useTabs": false
   },
   "dependencies": {
-    "crypto-browserify": "^3.12.0",
+    "expo-crypto": "~12.8.1",
     "ferns-ui": "*",
     "react": "18.2.0",
     "stream-browserify": "^3.0.0"
@@ -48,12 +48,12 @@
   "devDependencies": {
     "@babel/core": "^7.23.9",
     "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@expo/config-plugins": "~7.8.0",
+    "@expo/config-plugins": "~7.9.1",
     "@expo/webpack-config": "~19.0.1",
     "@shopify/flash-list": "1.6.3",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-config-ferns": "^0.5.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-comment-length": "^1.7.3",
@@ -65,8 +65,8 @@
     "eslint-plugin-react-native": "^4.1.0",
     "eslint-plugin-react-perf": "^3.3.2",
     "eslint-plugin-simple-import-sort": "^12.0.0",
-    "eslint-plugin-unused-imports": "3.1.0",
-    "expo": "^50.0.7",
+    "eslint-plugin-unused-imports": "3.2.0",
+    "expo": "~50.0.17",
     "expo-status-bar": "~1.11.1",
     "postcss": "8.4.38",
     "prettier": "^3.2.5",
