--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -1,59 +1,39 @@
 {
-  "name": "ferns-ui-demo",
+  "name": "demo",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "expo-router/entry",
   "scripts": {
-    "start": "NODE_OPTIONS=--openssl-legacy-provider expo start",
-    "android": "NODE_OPTIONS=--openssl-legacy-provider expo start --android",
-    "ios": "NODE_OPTIONS=--openssl-legacy-provider expo start --ios",
-    "web": "NODE_OPTIONS=--openssl-legacy-provider expo start --web",
-    "build-preview": "NODE_OPTIONS=--openssl-legacy-provider yarn build-web",
-    "build-web": "NODE_OPTIONS=--openssl-legacy-provider expo export:web",
-    "eject": "npx expo eject",
-    "lint": "eslint \"**/*.ts*\"",
-    "lintfix": "eslint --fix \"**/*.ts*\""
-  },
-  "license": "Apache-2.0",
-  "eslintConfig": {
-    "extends": [
-      "plugin:ferns/recommended"
-    ],
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-      "project": "./tsconfig.json",
-      "tsconfigRootDir": "./"
-    },
-    "rules": {
-      "@typescript-eslint/explicit-function-return-type": "off"
-    }
-  },
-  "prettier": {
-    "arrowParens": "always",
-    "bracketSpacing": false,
-    "printWidth": 100,
-    "semi": true,
-    "singleQuote": false,
-    "trailingComma": "es5",
-    "useTabs": false
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
   },
   "dependencies": {
+    "expo": "~50.0.14",
+    "expo-constants": "~15.4.6",
+    "expo-linking": "^6.2.2",
+    "expo-router": "~3.4.9",
+    "expo-status-bar": "~1.11.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.73.6",
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "react-native-web": "~0.19.6",
     "crypto-browserify": "^3.12.0",
     "ferns-ui": "*",
     "lodash": "^4.17.21",
     "mdurl": "^2.0.0",
-    "react": "18.2.0",
     "react-native-markdown-view": "^1.1.4",
-    "stream-browserify": "^3.0.0"
-  },
-  "resolutions": {
-    "@expo/cli": "0.17.0"
+    "stream-browserify": "^3.0.0",
+    "react-keyed-flatten-children": "^3.0.0",
+    "react-native-haptic-feedback": "^2.0.3",
+    "react-native-hyperlink": "^0.0.22",
+    "react-native-swiper-flatlist": "^3.2.3",
+    "swiper": "^11.0.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.23.9",
-    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
-    "@expo/config-plugins": "~7.8.0",
-    "@expo/webpack-config": "~19.0.1",
-    "@shopify/flash-list": "1.6.3",
+    "@babel/core": "^7.20.0",
     "@types/lodash": "^4.17.0",
     "@typescript-eslint/eslint-plugin": "^7.0.2",
     "@typescript-eslint/parser": "^7.0.2",
@@ -70,21 +50,11 @@
     "eslint-plugin-react-perf": "^3.3.2",
     "eslint-plugin-simple-import-sort": "^12.0.0",
     "eslint-plugin-unused-imports": "3.1.0",
-    "expo": "^50.0.7",
     "expo-status-bar": "~1.11.1",
     "postcss": "8.4.38",
     "prettier": "^3.2.5",
-    "react-keyed-flatten-children": "^3.0.0",
-    "react-native-haptic-feedback": "^2.0.3",
-    "react-native-hyperlink": "^0.0.22",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-swiper-flatlist": "^3.2.3",
-    "react-native-web": "~0.19.10",
-    "swiper": "^11.0.6",
     "typedoc": "^0.25.12",
     "typescript": "^5.3.3"
   },
-  "engine": {
-    "node": "18"
-  }
+  "private": true
 }
