--- a/apps/old-demo/app.json
+++ b/apps/old-demo/app.json
@@ -1,8 +1,7 @@
 {
   "expo": {
     "name": "ferns-ui-demo",
-    "slug": "ferns",
-    "scheme": "ferns",
+    "slug": "ferns-ui-demo",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -11,6 +10,9 @@
       "image": "./assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
+    },
+    "updates": {
+      "fallbackToCacheTimeout": 0
     },
     "assetBundlePatterns": [
       "**/*"
@@ -21,15 +23,16 @@
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "backgroundColor": "#FFFFFF"
       }
     },
     "web": {
       "favicon": "./assets/favicon.png",
-      "bundler": "metro"
-    },
-    "plugins": [
-      "expo-router"
-    ]
+      "build": {
+        "babel": {
+          "include": ["victory-native"]
+        }
+      }
+    }
   }
 }
