--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "description": "Fullstack Express React Native framework for building iOS, Android, and Web apps with an Express API",
   "license": "Apache-2.0",
   "scripts": {
-    "web": "yarn --cwd packages/demo web",
-    "ios": "yarn --cwd packages/demo ios",
-    "android": "yarn --cwd packages/demo android",
-    "lint": "yarn --cwd packages/demo lint && yarn --cwd packages/ui lint",
-    "lintfix": "yarn --cwd packages/demo lintfix && yarn --cwd packages/ui lintfix",
+    "web": "yarn --cwd apps/demo web",
+    "ios": "yarn --cwd apps/demo ios",
+    "android": "yarn --cwd apps/demo android",
+    "lint": "yarn --cwd apps/demo lint && yarn --cwd packages/ui lint",
+    "lintfix": "yarn --cwd apps/demo lintfix && yarn --cwd packages/ui lintfix",
     "build": "yarn --cwd packages/ui build",
-    "preview": "yarn build && yarn --cwd packages/demo build-web",
+    "preview": "yarn build && yarn --cwd apps/demo build-web",
     "clean": "rm -rf node_modules && rm -rf packages/ui/node_modules && rm -rf packages/demo/node_modules && yarn",
     "test": "yarn --cwd packages/ui test"
   },
